# ResumeAnalyzer

./: .gitignore  LICENSE  NOTICE.txt  README.md  pyproject.toml
data/: test_accountant.txt  test_devops.txt
src/: core.py  interface.py  llms.py  loader.py  main.py  prompts.py  rags.py
src/generator/: db_generator.py  prompts.py
src/loaders/: resume_classifier.py
